@@ -1,17 +1,14 @@
 package Project;
 
 import java.text.NumberFormat;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 
 class House extends Building {
 
-    //Fields
     private final int numFloors;
     private final String ownerName;
-    private static final List<House> houseList = new ArrayList<>();
+    private static final LinkedList<House> houseList = new LinkedList<>();
 
-    //Constructor
     protected House(float area, String address, int numFloors, String ownerName) {
         super(area, address);
         this.numFloors = numFloors;
@@ -19,12 +16,12 @@ class House extends Building {
         houseList.add(this);
     }
 
-    //Get method for the list
-    protected static List<House> getHouseList() { return houseList; }
+    protected static LinkedList<House> getHouseList() {
+        return houseList;
+    }
 
-    //Method to find the most spacious house
     private static House mostSpacious(){
-        House max = houseList.get(0);
+        House max = houseList.getFirst();
 
         for (House i : houseList) {
             if (i.getArea() / i.numFloors > max.getArea() / max.numFloors) max = i;
@@ -32,20 +29,17 @@ class House extends Building {
         return max;
     }
 
-    //Method for printing houses
     protected void fancyPrint(){
         System.out.printf("---------------------------------------------------%n");
         System.out.print(this);
         System.out.printf("---------------------------------------------------%n%n");
     }
 
-    //Method to print the most spacious house
     protected static void printMostSpacious(){
         System.out.println("НАЙ-ПРОСТОРНАТА КЪЩА Е:");
         mostSpacious().fancyPrint();
     }
 
-    //Override "toString" so the return value is as we want it
     @Override
     public String toString() {
         return  String.format("""
